--- a/src/main/resources/templates/upload-succes.html
+++ b/src/main/resources/templates/upload-succes.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Upload Success</title>
 </head>
 <body>
-$END$
-</body>
-</html>
+<h1>File Successfully uploaded</h1>
+</body></html>
